# arduino_lite

./: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  idf_component.yml
cores/esp32/: USBMSC.cpp  core_version.h
libraries/RainMaker/src/: RMakerQR.cpp
libraries/SD/src/: SD.cpp
libraries/SD_MMC/src/: SD_MMC.cpp
src/: arduino_lite.h
src/arduino/: Tone.cpp  esp32-hal-ledc.c  esp32-hal-ledc.h  esp32-hal-log.h  esp32-hal-matrix.c  esp32-hal-matrix.h  esp32-hal-misc.c  esp32-hal-periman.c  esp32-hal-periman.h  esp32-hal.h
src/cores/: USBMSC.cpp  USBMSC.h  chip-debug-report.cpp
src/libraries/SPI/src/: SPI.cpp
src/libraries/Wire/src/: Wire.cpp
